--- a/analysis/manuscript.tex
+++ b/analysis/manuscript.tex
@@ -930,7 +930,7 @@ Source code analysis including data used is available on GitHub:
 \addcontentsline{toc}{section}{References}
 
 \hypertarget{refs}{}
-\begin{CSLReferences}{1}{0}
+\begin{CSLReferences}
 \leavevmode\vadjust pre{\hypertarget{ref-Aviv_Reuven_2021}{}}%
 Aviv-Reuven, S., \& Rosenfeld, A. (2021). Publication patterns' changes
 due to the COVID-19 pandemic: A longitudinal and short-term
