--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -38,6 +38,27 @@
 
 @article{Jahn_2021, title={Toward transparency of hybrid open access through publisher-provided metadata: An article-level study of {Elsevier}}, volume={73}, ISSN={2330-1643}, url={http://dx.doi.org/10.1002/asi.24549}, DOI={10.1002/asi.24549}, number={1}, journal={Journal of the Association for Information Science and Technology}, publisher={Wiley}, author={Jahn, Najko and Matthias, Lisa and Laakso, Mikael}, year={2022}, month=jul, pages={104--118} }
 
+@book{Kramer_2024,
+author = {Kramer, Bianca},
+title = {Study on scientific publishing in {Europe} -- {Development}, diversity, and transparency of costs},
+publisher = {Publications Office of the European Union},
+year = {2024},
+doi = {doi/10.2777/89349}}
+
+@misc{Jisc_2024,
+  author       = {Brayman, Kira and
+                  Devenney, Amy and
+                  Dobson, Helen and
+                  Marques, Mafalda and
+                  Vernon, Anna},
+  title        = {A review of  transitional  agreements  in the {UK}},
+  month        = mar,
+  year         = 2024,
+  publisher    = {Zenodo},
+  doi          = {10.5281/zenodo.10787392},
+  url          = {https://doi.org/10.5281/zenodo.10787392}
+}
+
 @article{Taubert_2023, title={Understanding differences of the OA uptake within the {German} university landscape (2010–2020): part 1—journal-based OA}, volume={128}, ISSN={1588-2861}, url={http://dx.doi.org/10.1007/s11192-023-04716-3}, DOI={10.1007/s11192-023-04716-3}, number={6}, journal={Scientometrics}, publisher={Springer Science and Business Media LLC}, author={Taubert, Niels and Hobert, Anne and Jahn, Najko and Bruns, Andre and Iravani, Elham}, year={2023}, month=may, pages={3601–3625} }
 
 @article{Haucap_2021, title={The impact of the {German “DEAL”} on competition in the academic publishing market}, volume={42}, ISSN={1099-1468}, url={http://dx.doi.org/10.1002/mde.3493}, DOI={10.1002/mde.3493}, number={8}, journal={Managerial and Decision Economics}, publisher={Wiley}, author={Haucap, Justus and Moshgbar, Nima and Schmal, W. Benedikt}, year={2021}, month=nov, pages={2027–2049} }
