--- a/analysis/manuscript.tex
+++ b/analysis/manuscript.tex
@@ -24,8 +24,8 @@
 % make captions italic
 
 % number lines
-% \usepackage{lineno}
-% \linenumbers
+ \usepackage{lineno}
+ \linenumbers
             
 % bibliography
 \newlength{\cslhangindent}
@@ -48,7 +48,7 @@ najko.jahn@sub.uni-goettingen.de
 
 \authornote{ORCID: https://orcid.org/0000-0001-5105-1463}
 
-\abstract{The ongoing controversy surrounding transformative agreements, which aim to transition journal publishing to full open access, highlight the need for large-scale studies assessing the uptake of open access in hybrid journals. This includes evaluating the extent to which transformative agreements enabled open access. By combining publicly available data from various sources, including cOAlition S Journal Checker, Crossref, and OpenAlex, this study presents a novel approach that analyses over 700 agreements and nine million journal articles published in more than 11.000 hybrid journals. Estimates suggest a strong growth in open access between 2018 and 2022 from 4.3\% to 15\%. In 2022, 58\% of hybrid open access was enabled by transformative agreements. This trend was largely driven by the three commercial publishers Elsevier, Springer Nature, and Wiley, but the open access uptake varied substantially across journals, publishers, disciplines, and country affiliations. In particular, comparing the developments in the OECD and BRICS areas revealed different publication trends relative to hybrid open access. In conclusion, estimates suggest that current levels of implementation of transformative agreements is insufficient to bring about a large-scale transition to full open access.}
+\abstract{The ongoing controversy surrounding transformative agreements, which aim to transition journal publishing to full open access, highlight the need for large-scale studies assessing the impact of these agreements on hybrid open access. By combining publicly available data from various sources, including cOAlition S Journal Checker, Crossref, and OpenAlex, this study presents a novel approach that analyses over 700 agreements. Results suggest a strong growth in open access between 2018 and 2022 from 4.3\% to 15\%. During this period, 11,189 hybrid journals provided open access to 742,369 out of 8,146,958 articles, representing a five-year open access proportion of 9.1\%. Authors who could make use of transformative agreements at the time of publication contributed 328,957 open access articles. In 2022, 143,615 out of 249,511 open access articles in hybrid journals (58\%) were enabled by transformative agreements. This trend was largely driven by the three commercial publishers Elsevier, Springer Nature, and Wiley, but the open access uptake varied substantially across journals, publishers, disciplines, and country affiliations. In particular, the OECD and BRICS areas revealed different publication trends. In conclusion, this study suggests that current levels of implementation of transformative agreements is insufficient to bring about a large-scale transition to full open access.}
 
 \keywords{hybrid open access, transformative agreements, scholarly publishing, big deals, bibliometrics}
 
@@ -56,7 +56,7 @@ najko.jahn@sub.uni-goettingen.de
 \maketitle
 
 % QSS wants numbered sections
-%\setcounter{secnumdepth}{2}
+\setcounter{secnumdepth}{2}
 
 \hypertarget{introduction}{%
 \section{Introduction}\label{introduction}}
@@ -70,11 +70,12 @@ from subscriptions, while libraries and funders could change their
 funding models and shift expenditures from subscription to open access.
 However, initial approaches, mainly based on publication fees, also
 called article processing charges (APCs), did not contribute
-substantially to a large open access uptake. In 2009, Springer reported
-open access to 1\% of articles in hybrid journals (Dallmeier-Tiessen et
-al., 2010). Other studies have also recorded low uptake. In 2011, only
-1-2\% of articles were open access (Björk, 2012), increasing to around
-4\% between 2011 and 2013 (Laakso \& Björk, 2016).
+substantially to a large open access uptake. In 2009, the publisher
+Springer reported that 1\% of its articles in hybrid journals were open
+access (Dallmeier-Tiessen et al., 2010). Other studies have also
+recorded low uptake. In 2011, only 1-2\% of articles were open access
+(Björk, 2012), increasing to around 4\% between 2011 and 2013 (Laakso \&
+Björk, 2016).
 
 With the introduction of central funding mechanisms for publication fees
 in some European countries since 2012, an substantial increase in hybrid
@@ -133,10 +134,11 @@ funding for fully open access journals (Jahn \& Tullney, 2016).
 By the end of 2023, many transformative agreements had been implemented,
 but the interim outcomes were mixed. The ESAC Transformative Agreement
 Registry\footnote{\url{https://esac-initiative.org/about/transformative-agreements/agreement-registry/}},
-the largest source of disclosure, recorded more than 800 transformative
-agreements, resulting in up to 900.000 open access articles published in
-both fully open access and hybrid journals according to the accompanying
-ESAC Market Watch\footnote{\url{https://esac-initiative.org/market-watch/}}.
+the largest resource for library consortia to publicly share their
+agreements, recorded more than 800 transformative agreements. These
+agreements resulted in the publication of up to 900.000 open access
+articles published in both fully open access and hybrid journals,
+according to the accompanying ESAC Market Watch\footnote{\url{https://esac-initiative.org/market-watch/}}.
 Library consortia reported increased open access volume, streamlined
 payment and monitoring procedures, as well as extensive utilisation of
 open access options by the researchers they serve (Marques \& Stone,
@@ -163,10 +165,11 @@ The controversies surrounding hybrid open access and transformative
 agreements have led to varying policy conclusions. For instance, the
 Association of Swedish Higher Education Institutions (Sveriges
 universitets- och högskoleförbund, SUHF) recommended only supporting
-agreements for publishing in fully open access journals \footnote{\url{https://www.su.se/english/news/open-access-need-to-move-away-from-transformative-agreements-1.683787}}.
+agreements for publishing in fully open access journals by 2026
+\footnote{\url{https://www.su.se/english/news/open-access-need-to-move-away-from-transformative-agreements-1.683787}}.
 Likewise, most cOAlition S funders will discontinue financial support
-for transformative agreements by the end of 2024 (Liverpool, 2023). The
-consortium also removed the majority of hybrid journals from its
+for transformative agreements by the end of 2024 (Liverpool, 2023).
+cOAlition S also removed the majority of hybrid journals from its
 Transformative Journal program in 2023 due to publishers' failure to
 meet self-defined open access growth targets (Brainard, 2023). By
 contrast, the German DEAL consortium announced a five-year
@@ -180,18 +183,19 @@ of transitioning journal publishing to full open access, there is
 limited evidence available on the uptake of open access in hybrid
 journals, and the extent to which this can be attributed to
 transformative agreements. Previous studies have focused on specific
-countries (Haucap et al., 2021; Huang et al., 2020; Pölönen et al.,
-2020; Taubert et al., 2023; Wenaas, 2022) or publisher portfolios
-(Bakker et al., 2024; Fraser et al., 2023; Jahn et al., 2022; Momeni et
-al., 2023; Pieper \& Broschinski, 2018; Schmal, 2024), while large-scale
-studies relied on self-reported agreement data (Moskovkin et al., 2022),
-or used APC pricing lists (Shu \& Larivière, 2023). In particular, data
-availability is a limiting factor when studying the impact of
-transformative agreements (Bakker et al., 2024), because bibliometric
-databases, even though many allow the retrieval of open access articles
-in hybrid journals, do not directly attribute them to specific
-transformative agreements. Likewise, article-level open access invoicing
-data are only partly available (Jahn et al., 2022).
+countries (Brayman et al., 2024; Haucap et al., 2021; Huang et al.,
+2020; Pölönen et al., 2020; Taubert et al., 2023; Wenaas, 2022) or
+publisher portfolios (Bakker et al., 2024; Fraser et al., 2023; Jahn et
+al., 2022; Momeni et al., 2023; Pieper \& Broschinski, 2018; Schmal,
+2024), while large-scale studies relied on self-reported agreement data
+(Moskovkin et al., 2022), or used APC pricing lists (Shu \& Larivière,
+2023). In particular, data availability is a limiting factor when
+studying the impact of transformative agreements (Bakker et al., 2024),
+because bibliometric databases, even though many allow the retrieval of
+open access articles in hybrid journals, do not directly attribute them
+to specific transformative agreements. Likewise, article-level open
+access invoicing and cost data are only partly available (Jahn et al.,
+2022; Kramer, 2024).
 
 The present study aims to address these limitations by combining
 multiple openly available data sources to determine open access uptake
@@ -264,16 +268,17 @@ downloaded on 11 December 2023. This ensured that transformative
 agreements, which ended from 2021 onwards, were included, representing
 the majority of transformative agreements. Overall, the four combined
 Transformative Agreement Data dumps used in this study contained 729 of
-869 agreements listed in the ESAC registry by December 2023.
+869 agreements listed in the ESAC Transformative Agreement Registry by
+December 2023.
 
 The Transformative Agreement Data dumps link agreements to journals
 represented by journal names and the ISSN. After mapping ISSN variants
 to the corresponding linking ISSN (ISSN-L), as provided by the ISSN
-International Centre, journals were associated with publishers using the
-ESAC ID, a unique identifier for transformative agreements in the ESAC
-Transformative Agreement Registry. Furthermore, journal subjects
-according to the All Science Journal Classification (ASJC) were added
-from the Scopus journal source list as of August 2023.
+International Centre, journals were associated with publishers according
+to the ESAC Transformative Agreement Registry. This reflects that some
+portfolios may include imprints. Furthermore, journal subjects according
+to the All Science Journal Classification (ASJC) were added from the
+Scopus journal source list as of August 2023.
 
 Because transformative agreements can include both fully open access and
 hybrid journals, the data were complemented with information about a
@@ -300,7 +305,7 @@ Crossref metadata lacked information to distinguish between original
 research articles, including reviews, and other types of journal
 content, which are often not covered by transformative agreements
 (Borrego et al., 2021), only articles published in regular issues
-indicated by non-numeric pagination were included. Furthermore, paratext
+indicated by numeric pagination were included. Furthermore, paratext
 recognition was applied to exclude non-scholarly journal content such as
 table of contents.
 
@@ -339,7 +344,8 @@ After retrieving the article metadata, the publication volume, including
 open access, was calculated for each journal. To improve the
 identification of hybrid journals, journals with an open access
 proportion above 95\% were excluded. This step allowed removing
-additional 241 fully open access journals.
+additional 134 fully open access journals. Together, these journals
+published 8,565 articles between 2018 and 2022.
 
 Affiliation metadata about corresponding authors are crucial for the
 planning and evaluation of transformative agreements because they are
@@ -350,7 +356,7 @@ OpenAlex. However, because corresponding author affiliation was only
 available for 54\% of the investigated articles in OpenAlex, this study
 focused on first authors and their affiliations instead; approximately
 90\% of the investigated articles had first author affiliation metadata
-in OpenAlex, which is a much larger proportion than previoulsy reported
+in OpenAlex, which is a much larger proportion than previously reported
 for the October 2022 snapshot (Zhang et al., 2024). First authors
 typically contribute the most to a paper and are often considered being
 lead authors (Larivière et al., 2016). Related studies also assumed
@@ -394,8 +400,8 @@ Core Team, 2020) were used. The resulting data are openly available
 through an R data package, hoaddata (Jahn, 2023). Following Marwick et
 al. (2018), hoaddata contains not only the datasets used in the data
 analysis. It also includes code used to compile the data by connecting
-it to the cloud-based Google Big Query data warehouse, where scholarly
-big data from Crossref, OpenAlex and Unpaywall were imported, using
+it to a cloud-based Google BigQuery data warehouse, where scholarly big
+data from Crossref, OpenAlex and Unpaywall were made available, using
 bigrquery (Wickham \& Bryan, 2023). To increase computational
 reproducibility, data aggregation through hoaddata was automatically
 carried out using GitHub Actions, a continuous integration service.
@@ -435,11 +441,12 @@ the total article volume of the investigated journals rose from
 
 Figure \ref{fig:results_overview}B highlights that the majority of
 hybrid open access was made available through transformative agreements
-in 2021 and 2022, contributing 58\% of the total open access article
-volume in 2022. However, there was also a notable increase in open
-access provision through other means, presumably publication fees being
-not invoiced through transformative agreements, from 4.1\% (n = 62,625)
-in 2018 to 6.3\% (n = 105,896) in 2022.
+in 2021 and 2022. In 2022, 143,615 out of 249,511 open access articles
+were from eligible authors, representing 58\%. However, there was also a
+notable increase in open access provision through other means,
+presumably publication fees being not invoiced through transformative
+agreements, from 4.1\% (n = 62,625) in 2018 to 6.3\% (n = 105,896) in
+2022.
 
 Figure \ref{fig:results_overview}C depicts the substantial variations
 among the hybrid journals included in transformative agreements in terms
@@ -506,7 +513,7 @@ open access market share (23\% Springer Nature resp. 23\% Wiley). This
 difference between Elsevier on the one hand and Springer Nature and
 Wiley on the other can be attributed to transformative agreements, as
 the latter made the majority of their open access articles available
-through such deals (Springer Nature 57\% resp. Wiley 55\%).
+through such deals (57\% Springer Nature resp. 55\% Wiley).
 
 Figure \ref{fig:publisher_figure} takes a closer look into the growth of
 hybrid open access across publishers by year, with a focus on open
@@ -643,14 +650,15 @@ journals.
 
 Between 2018 and 2022, high-income countries almost exclusively
 dominated hybrid open access publishing through transformative
-agreements. During this period, first authors affiliated with
-institutions from Organisation for Economic Co-operation and Development
-(OECD) member countries published 602,050 open access articles in hybrid
-journals, representing 81\% of the investigated open access articles.
-This disparity between OECD nations and other countries becomes even
-more evident when considering open access through transformative
-agreements, as 310,712 of 328,957, or 94\% of open access articles were
-associated with such agreements.
+agreements. To discern socio-economic differences, these countries were
+grouped according to their membership in the Organisation for Economic
+Co-operation and Development (OECD). During 2018 and 2022, first authors
+affiliated with institutions from OECD member countries published
+602,050 open access articles in hybrid journals, representing 81\% of
+the investigated open access articles. This disparity between OECD
+nations and other countries becomes even more evident when considering
+open access through transformative agreements, as 310,712 of 328,957, or
+94\% of open access articles were associated with such agreements.
 
 Figure \ref{fig:country_patch}A shows the development of hybrid open
 access publishing by country, comparing the OECD area with the BRICS, an
@@ -751,18 +759,17 @@ presents a novel approach based on open data, which leverages metadata
 on over 700 agreements and nine million journal articles to estimate the
 extent to which transformation agreements contribute to the transition
 of this journal business model. The results highlight a strong growth in
-open access between 2018 and 2022, driven by an increasing number of
-institutions that had transformative agreements in place. However, the
-majority of research literature published in hybrid journals in this
-five-year period remained behind publisher paywalls. Growth in the
-adoption of open access in hybrid journals, in particular through
-transformative agreements, can be largely attributed to three large
-commercial publishers -- Elsevier, Springer Nature, and Wiley -- but
-varies substantially across journals, publishers, disciplines, and
-country affiliations. Despite the limitations of the data, the findings
-indicate that the current level of implementation of transformative
-agreements is insufficient to bring about a large-scale transition to
-fully open access.
+open access between 2018 and 2022, driven by an increasing number
+transformative agreements. However, the majority of research literature
+published in hybrid journals in this five-year period remained behind
+publisher paywalls. Growth in the adoption of open access in hybrid
+journals, in particular through transformative agreements, can be
+largely attributed to three large commercial publishers -- Elsevier,
+Springer Nature, and Wiley -- but varies substantially across journals,
+publishers, disciplines, and country affiliations. Despite the
+limitations of the data, the findings indicate that the current level of
+implementation of transformative agreements is insufficient to bring
+about a large-scale transition to full open access.
 
 A key finding of this analysis is that transformative agreements
 maintain market concentration. Specifically, the three largest
@@ -790,11 +797,11 @@ through transformative agreements across journals, which can be
 attributed to the alignment of authors' affiliations and the
 availability of such agreements at their institutions. In line with
 previous research findings (Butler et al., 2023; Jahn et al., 2022;
-Wenaas, 2022), high uptake rates were observed across hybrid journals in
-Social Sciences and Humanities. However, it is important to emphasise
+Wenaas, 2022), high uptake rates were observed across Social Sciences
+and Humanities hybrid journals. However, it is important to emphasise
 that these hybrid journals do not encompass the entire field. For
 example, Khanna et al. (2022) found that approximately 60\% of journals
-utilizing the open-source publishing platform Open Journal Systems (OJS)
+utilising the open-source publishing platform Open Journal Systems (OJS)
 fall within the Social Sciences and Humanities. In these fields, the
 majority of full open access journals are so-called ``Diamond OA
 journals'', which do not charge publication fees (Bosman, Frantsvåg, et
@@ -841,7 +848,7 @@ funding sources for publication fees.
 
 This large-scale study provides the first empirical evidence of the
 influence of transformative agreements on the transition of hybrid
-journals to full open access. However, several limitations needs to be
+journals to full open access. However, several limitations need to be
 acknowledged. From a data perspective, estimations of open access
 through transformative agreements were established by linking first
 author affiliations with publicly available agreement data from
@@ -853,11 +860,10 @@ Furthermore, assessing the quality of the OpenAlex and Crossref data
 used, particularly in terms of affiliations and article types, by
 combining them with established bibliometric databases such as Scopus
 and Web of Science was beyond the scope of this analysis (Visser et al.,
-2021). Overall, the methodology is designed in such a way that the
-results underestimate rather than overestimate the adoption of open
-access through transformative agreements. In addition, the data used in
-this study are openly available, along with the code used for this
-analysis.
+2021). Overall, the methodology is designed to underestimate, rather
+than overestimate, the adoption of open access through transformative
+agreements. In addition, the data used in this study are openly
+available, along with the code used for this analysis.
 
 Additionally, it must be noted that the study period was significantly
 impacted by the COVID-19 pandemic, which led to an unprecedented number
@@ -890,14 +896,14 @@ behaviour following the introduction of these agreements (Schmal, 2024).
 
 This study has practical implications for research funding and
 libraries. Of primary concern should be the observed differences across
-countries, particularly the relationship between economic development
-and open access adoption. From a data perspective, the reporting of open
-access funding, including transformative agreements, is not harmonised,
-but often crowd-sourced from various sources. To improve the assessment
-of transformative agreements, libraries and publishers need to
-collaborate on standards and services to publicly share information
-about respective journal portfolios, participating institutions and open
-access invoicing.
+countries, particularly the relationship between socio-economic
+development and open access adoption. From a data perspective, the
+reporting of open access funding, including transformative agreements,
+is not harmonised, but often crowd-sourced from various sources. To
+improve the assessment of transformative agreements, libraries and
+publishers need to collaborate on standards and services to publicly
+share information about respective journal portfolios, participating
+institutions and open access invoicing.
 
 In summary, this study provides empirical insights into the development
 of hybrid open access following the introduction of transformative
@@ -930,7 +936,7 @@ Source code analysis including data used is available on GitHub:
 \addcontentsline{toc}{section}{References}
 
 \hypertarget{refs}{}
-\begin{CSLReferences}
+\begin{CSLReferences}{1}{0}
 \leavevmode\vadjust pre{\hypertarget{ref-Aviv_Reuven_2021}{}}%
 Aviv-Reuven, S., \& Rosenfeld, A. (2021). Publication patterns' changes
 due to the COVID-19 pandemic: A longitudinal and short-term
@@ -999,9 +1005,14 @@ big open-access deal. \emph{Science}.
 \url{https://doi.org/10.1126/science.abi5505}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Brainard_2023}{}}%
-Brainard, J. (2023). {`Transformative'} journals get booted for
+Brainard, J. (2023). {``Transformative''} journals get booted for
 switching to open access too slowly. \emph{Science}.
 \url{https://doi.org/10.1126/science.adj3282}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Jisc_2024}{}}%
+Brayman, K., Devenney, A., Dobson, H., Marques, M., \& Vernon, A.
+(2024). \emph{A review of transitional agreements in the {UK}}. Zenodo.
+\url{https://doi.org/10.5281/zenodo.10787392}
 
 \leavevmode\vadjust pre{\hypertarget{ref-goldoa}{}}%
 Bruns, A., Cakir, Y., Kaya, S., \& Beidaghi, S. (2022).
@@ -1043,7 +1054,7 @@ negotiations with {Elsevier}. \emph{Quantitative Science Studies},
 
 \leavevmode\vadjust pre{\hypertarget{ref-Geschuhn_2017}{}}%
 Geschuhn, K., \& Stone, G. (2017). It's the workflows, stupid! What is
-required to make {`offsetting'} work for the open access transition.
+required to make {``offsetting''} work for the open access transition.
 \emph{Insights the {UKSG} Journal}, \emph{30}(3), 103--114.
 \url{https://doi.org/10.1629/uksg.391}
 
@@ -1120,6 +1131,11 @@ Koley, M., \& Lala, K. (2023). Limitations of the {{``Indian one nation,
 one subscription''}} policy proposal and a way forward. \emph{Journal of
 Librarianship and Information Science}, 096100062211467.
 \url{https://doi.org/10.1177/09610006221146771}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Kramer_2024}{}}%
+Kramer, B. (2024). \emph{Study on scientific publishing in {Europe} --
+{Development}, diversity, and transparency of costs}. Publications
+Office of the European Union. \url{https://doi.org/doi/10.2777/89349}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Kwiek_2020}{}}%
 Kwiek, M. (2021). What large-scale publication and citation data tell us
@@ -1273,7 +1289,7 @@ Publishing}, \emph{16}(3), 163--166.
 \url{https://doi.org/10.1087/095315103322110923}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Goodin_2023}{}}%
-Rasmussen, K. B. (2023). Interview with {Robert {`Bob'} E. Goodin}.
+Rasmussen, K. B. (2023). Interview with {Robert {``Bob''} E. Goodin}.
 \emph{Tidskrift För Politisk Filosofi}.
 \url{https://www.politiskfilosofi.se/fulltext/2023-2/pdf/TPF_2023-2_interview_with_robert_bob_e_goodin.pdf}
 
