Improve abstract as suggested by Reviewer 1

--- a/analysis/apa6.sty
+++ b/analysis/apa6.sty
@@ -51,7 +51,7 @@ najko.jahn@sub.uni-goettingen.de
 
 \authornote{ORCID: https://orcid.org/0000-0001-5105-1463}
 
-\abstract{The ongoing controversy surrounding transformative agreements, which aim to transition journal publishing to full open access, highlight the need for large-scale studies assessing the impact of these agreements on hybrid open access. By combining publicly available data from various sources, including cOAlition S Journal Checker, Crossref, and OpenAlex, this study presents a novel approach that analyses over 700 agreements. Results suggest a strong growth in open access between 2018 and 2022 from 4.3\% to 15\%. During this period, 11,189 hybrid journals provided open access to 742,369 out of 8,146,958 articles, representing a five-year open access proportion of 9.1\%. Authors who could make use of transformative agreements at the time of publication contributed 328,957 open access articles. In 2022, 143,615 out of 249,511 open access articles in hybrid journals (58\%) were enabled by transformative agreements. This trend was largely driven by the three commercial publishers Elsevier, Springer Nature, and Wiley, but the open access uptake varied substantially across journals, publishers, disciplines, and country affiliations. In particular, the OECD and BRICS areas revealed different publication trends. In conclusion, this study suggests that current levels of implementation of transformative agreements is insufficient to bring about a large-scale transition to full open access.}
+\abstract{The ongoing controversy surrounding transformative agreements, which aim to transition subscription-based journal publishing to full open access, highlights the need for large-scale studies assessing the impact of these agreements on hybrid open access. By combining multiple open data sources, including cOAlition S Journal Checker, Crossref, and OpenAlex, this study presents a novel approach that analyses over 700 agreements. Results suggest a strong growth in open access, from 4.3\% in 2018 to 15\% in 2022. In total, 11,189 hybrid journals provided open access to 742,369 out of 8,146,958 articles, representing a five-year open access proportion of 9.1\%. Transformative agreements made 328,957 or 44\% of articles open access between 2018 and 2022. The impact of these agreements was particularly evident in the final year of analysis, 2022, when they facilitated 58\% (143,615 out of 249,511) of open access articles. This trend was largely driven by the three commercial publishers Elsevier, Springer Nature, and Wiley, but the open access uptake varied substantially across journals, publishers, disciplines, and countries. Particularly, the OECD and BRICS areas revealed different publication trends. In conclusion, this study suggests that current levels of implementation of transformative agreements is insufficient to bring about a large-scale transition to full open access.}
 
 \keywords{hybrid open access, transformative agreements, scholarly publishing, big deals, bibliometrics}
 
